<resources>
    <string name="app_name">爱高尔夫</string>
	<string name="str_exit_msg">再按一次返回键退出!</string>
	<string name="str_no_value">--</string>
	<string name="str_update_title">版本更新</string>
	<string name="str_acc_login">立即登录</string>
    <string name="str_acc_login2">已有账号立即登录</string>
    <string name="str_rmb">￥</string>
    <string name="str_rmb_unit">元</string>
	<string name="str_acc_register">立即注册</string>
	<string name="str_acc_reset">忘记密码？</string>
	<string name="str_acc_login_def_msg">登录失败，请稍后再试…</string>
	<string name="str_share_menu_micro_blog">新浪微博</string>
	<string name="str_share_menu_micro_message_friend">微信好友</string>
	<string name="str_share_menu_micro_message_friend_circle">微信朋友圈</string>
	<string name="str_share_menu_QQ">QQ好友</string>
	<string name="str_share_menu_QQ_zone">QQ空间</string>
    <string name="str_reg_phone_submit_title">填写手机号</string>
    <string name="str_reg_phone_submit_hint">陌生用户无权限查看您的手机号</string>
    <string name="str_agree_ment_title">用户协议</string>
    <string name="str_agree_ment_read">我知道了</string>
    <string name="str_agree_ment_content"> \t\t\t\t\t\t《爱高尔夫APP服务协议》\n\n
\t\t您注册成为爱高尔夫注册用户之前，应仔细阅读本服务协议，爱高尔夫APP平台将依据以下条件和条款为您提供服务。

成都爱高尔夫科技有限公司作为爱高尔夫APP（以下简称“爱高”）的经营者，根据本服务协议及/或随时对其的修改向您提供服务。本服务条款具有合同法上的法律效力。
如果您对协议的任何条款表示异议，您可以选择不注册，一旦您点选“注册”并通过注册程序，即表示您自愿接受本协议之所有条款，并已成为爱高的注册会员。用户在使用爱高的同时，同意接平台会员服务提供的各类信息服务。

\n\n一、服务条款的确认

\n\t\t1.1 用户应当同意本协议的条款并按照页面上的提示完成全部的注册程序。用户在进行注册程序过程中点击"同意"按钮即表示用户与爱高达成协议，完全接受本协议项下的全部条款。

\n\t\t1.2 用户注册成功后，爱高将给予每个用户一个用户帐号及相应的密码，该用户帐号和密码由用户负责保管；用户应当对以其用户帐号进行的所有活动和事件负法律责任。

\n\t\t1.3 用户可以使用爱高各个频道单项服务，当用户使用爱高各单项服务时，用户的使用行为视为其对该单项服务的服务条款以及爱高在该单项服务中发出的各类公告的同意。

\n\t\t1.4 爱高会员服务协议以及各个频道单项服务条款和公告可由爱高随时更新，且无需另行通知。您在使用相关服务时,应关注并遵守其所适用的相关条款。

\n\n二、注册信息和隐私保护

\n\t\t2.1 爱高帐号（即爱高用户ID）的所有权归爱高，用户完成注册申请手续后，获得爱高帐号的使用权。用户应提供及时、详尽及准确的个人资料，并不断更新注册资料，符合及时、详尽准确的要求。所有原始键入的资料将作为注册资料。如果因用户注册信息不真实而引起的问题及其产生的后果，爱高不负任何责任。

\n\t\t2.2 用户不得将其帐号、密码转让或出借予他人使用。如用户发现其帐号遭他人非法使用，应立即通知爱高。因黑客行为或用户的保管疏忽导致帐号、密码遭他人非法使用，爱高不承担任何责任。

\n\t\t2.3 为了保障用户使用本服务的安全以及不断改进服务质量，本公司将记录并保存您登录和使用本服务的相关信息，但本公司承诺不将此类信息提供给任何第三方（除双方另有约定或法律法规另有规定及本公司关联公司外）。

\n\t\t2.4 本公司会对用户的身份数据进行综合统计，并出于销售和奖励的需要使用或披露。

\n\t\t2.5 为更为有效地向用户提供服务，用户同意，本公司有权将用户注册及使用本服务过程中所提供、形成的信息提供给本公司关联公司或公司旗下的其他公司。同时，为更安全有效地向用户提供服务，根据法律法规的规定，或本公司需识别用户的身份，或本公司认为用户的账户存在风险时，本公司有权要求用户提交身份信息（包括但不限于身份证、户口本、护照等证件或其他文件）。除本协议另有规定外，本公司不对外公开或向第三方提供用户的信息，但以下情况除外：
\n\t\t(1)事先获得用户的明确授权；
\n\t\t(2)只有披露用户的个人资料，才能提供用户需要的产品和（或）服务；
\n\t\t(3)按照本协议的要求进行的披露；
\n\t\t(4)根据法律法规的规定；
\n\t\t(5)按照政府主管部门的要求；
\n\t\t(6)为维护本公司及其关联公司的合法权益；

\n\t\t2.6 在阅读本协议以注册爱高用户时，用户尚未满18周岁的，不能使用本服务，请用户终止注册行为，不要向我们提供您的任何个人信息。

\n\n三、使用规则

\n\t\t3.1 用户在使用爱高服务时，必须遵守中华人民共和国相关法律法规的规定，用户应同意将不会利用本服务进行任何违法或不正当的活动，包括但不限于下列行为∶
\n\t\t3.1.1 上载、展示、张贴、传播或以其它方式传送含有下列内容之一的信息：
  \n\t\t·反对宪法所确定的基本原则的；
   \n\t\t·危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；
   \n\t\t·损害国家荣誉和利益的；
   \n\t\t·煽动民族仇恨、民族歧视、破坏民族团结的；
   \n\t\t·破坏国家宗教政策，宣扬邪教和封建迷信的；
   \n\t\t·散布谣言，扰乱社会秩序，破坏社会稳定的；
   \n\t\t·散布淫秽、色情、赌博、暴力、凶杀、恐怖或者教唆犯罪的；
   \n\t\t·侮辱或者诽谤他人，侵害他人合法权利的；
   \n\t\t·含有虚假、有害、胁迫、侵害他人隐私、骚扰、侵害、中伤、粗俗、猥亵、或其它道德上令人反感的内容；
   \n\t\t·含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的。
\n\t\t3.1.2 利用爱高服务从事以下活动：
  \n\t\t·未经允许，进入计算机信息网络或者使用计算机信息网络资源的；
   \n\t\t·未经允许，对计算机信息网络功能进行删除、修改或者增加的；
   \n\t\t·未经允许，对进入计算机信息网络中存储、处理或者传输的数据和应用程序进行删除、修改或者增加的；
   \n\t\t·故意制作、传播计算机病毒等破坏性程序的；
   \n\t\t·其他危害计算机信息网络安全的行为。
\n\t\t3.1.3 为任何非法目的而使用网络服务系统；

\n\t\t3.2 用户违反本协议或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，您同意赔偿爱高与合作公司、关联公司，并使之免受损害。对此，爱高有权视用户的行为性质，采取包括但不限于删除用户发布信息内容、暂停使用许可、终止服务、限制使用、回收爱高帐号、追究法律责任等措施。对恶意注册爱高帐号或利用爱高帐号进行违法活动、捣乱、骚扰、欺骗、其他用户以及其他违反本协议的行为，爱高有权回收其帐号。同时，本公司会视司法部门的要求，协助调查。

\n\t\t3.3 用户不得对本服务任何部分通过本服务任何部分或使用本服务获得的任何内容，进行复制、拷贝、出售、转售或用于任何其它商业目的。

\n\t\t3.4 用户须对自己在使用爱高服务过程中的行为承担法律责任。用户承担法律责任的形式包括但不限于：对受到侵害者进行赔偿，以及在爱高公司首先承担了因用户行为导致的行政处罚或侵权损害赔偿责任后，用户应给予爱高公司等额的赔偿。

\n\n四、服务内容

\n\t\t4.1 除非本服务协议另有其它明确规定，爱高在用户注册后所推出的新产品、新功能、新服务，均受到本服务协议之规范。

\n\t\t4.2 为使用本服务，您必须能够自行经有法律资格对您提供互联网接入服务的第三方，进入国际互联网，并应自行支付相关服务费用。此外，您必须自行配备及负责与国际联网连线所需之一切必要装备，包括手机、计算机、数据机或其它存取装置。

\n\t\t4.3 鉴于网络服务的特殊性，用户同意爱高有权不经事先通知，随时变更、中断或终止部分或全部的网络服务（包括收费网络服务）。爱高不担保网络服务不会中断，对网络服务的及时性、安全性、准确性也都不作担保。

\n\t\t4.4 爱高需要定期或不定期地对提供网络服务的平台或相关的设备进行检修或者维护，如因此类情况而造成网络服务（包括收费网络服务）在合理时间内的中断，爱高无需为此承担任何责任。爱高保留不经事先通知为维修保养、升级或其它目的暂停全部或部分的网络服务的权利。

\n\t\t4.5 本服务或第三人可提供与其它国际互联网上之网站或资源之链接。由于爱高无法控制这些网站及资源，您了解并同意，此类网站或资源是否可供利用，爱高不予负责，存在或源于此类网站或资源之任何内容、广告、产品或其它资料，爱高亦不予保证或负责。因使用或依赖任何此类网站或资源发布的或经由此类网站或资源获得的任何内容、商品或服务所产生的任何损害或损失，爱高对其合法性不负责，亦不承担任何责任。

\n\t\t4.6 用户明确同意其使用爱高网络服务所存在的风险将完全由其自己承担。用户理解并接受下载或通过爱高服务而链接及得到的资讯、产品及服务均系爱高自动搜录，爱高对其合法性概不负责，亦不承担任何法律责任，用户自行承担风险，爱高不做任何形式的保证, 不保证搜索结果满足用户的要求，不保证搜索服务不中断，对搜索结果的安全性、正确性、及时性、合法性均不做担保。

\n\t\t4.7 12个月未登录的帐号，爱高保留关闭的权利。

\n\t\t4.8 爱高有权于任何时间暂时或永久修改或终止本服务（或其任何部分），而无论其通知与否，爱高对用户和任何第三人均无需承担任何责任。

\n\t\t4.9 终止服务 您同意爱高得基于其自行之考虑，因任何理由，包含但不限于长时间未使用，或爱高认为您已经违反本服务协议的文字及精神，终止您的密码、帐号或本服务之使用（或服务之任何部分），并将您在本服务内任何内容加以移除并删除。您同意依本服务协议任何规定提供之本服务，无需进行事先通知即可中断或终止，您承认并同意，爱高可立即关闭或删除您的帐号及您帐号中所有相关信息及文件，及/或禁止继续使用前述文件或本服务。此外，您同意若本服务之使用被中断或终止或您的帐号及相关信息和文件被关闭或删除，爱高对您或任何第三人均不承担任何责任。

\n\n五、免责声明

\n\t\t5.1 爱高作为一家互联网信息服务提供商，将高尔夫爱好者及教练提供的信息汇集于互联网平台、供用户搜索并对搜索的结果进行邀约服务。

\n\t\t5.2 任何通过爱高搜索而获取的信息均来自于用户，爱高负责按"现状"和"可得到"的状态向您提供服务。但爱高对邀约服务不作任何明示或暗示的保证，包括但不限于其适用性、没有错误或疏漏、持续性、准确性、可靠性、适用于某一特定用途。同时，爱高也不对预定服务所涉及的技术及信息的有效性、准确性、正确性、可靠性、质量、稳定、完整和及时性作出任何承诺和保证。如您邀约的教练或球友出现任何问题，您应与其本人联系。爱高将尽力帮助您获取真实可靠的信息，同时也需要您及时反馈在使用中遇到的问题并对欺诈行为进行举报，以提高爱高的网络信息服务质量。

\n\t\t5.3 爱高不担保其提供的网络服务一定能满足您的要求，也不担保其提供的网络服务不会中断，对其提供的网络服务的及时性、安全性、准确性也都不做担保。

\n\t\t5.4 为方便您的使用，爱高基于用户提供的评价而进行的评级、推荐或风险提示仅供您参考，爱高不担保该等评级、推荐或风险提示的准确性和完整性，对推荐的内容及服务亦不承担任何责任。

\n\t\t5.5 爱高有权受理用户之间因交易产生的争议，并有权单方判断与该争议相关的事实及应适用的规则，进而作出处理决定。该处理决定对您有约束力。爱高并非司法机构，仅能以普通人的身份对证据进行鉴别，爱高对争议的调处完全是基于您的委托，爱高无法保证争议处理结果符合您的期望，也不对争议调处结论承担任何责任。如您因此遭受损失，您同意自行向受益人索偿。

\n\t\t5.6 本声明适用中华人民共和国法律，您和爱高一致同意服从中华人民共和国人民法院管辖。如其中任何条款与中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款依旧具有法律效力。我们保留随时更改上述免责及其他条款的权利。

\n\n六、知识产权和其他合法权益（包括但不限于名誉权、商誉权）

\n\t\t6.1 爱高尊重他人知识产权和合法权益，呼吁用户也要同样尊重知识产权和他人合法权益。若您认为您的知识产权或其他合法权益被侵犯，请按照以下说明向爱高提供资料。
\n\t\t请注意，如果权利通知的陈述失实，权利通知提交者将承担对由此造成的全部法律责任（包括但不限于赔偿各种费用及律师费）。如果上述个人或单位不确定网络上可获取的资料是否侵犯了其知识产权和其他合法权益，爱高建议该个人或单位首先咨询专业人士。为了爱高有效处理上述个人或单位的权利通知，请使用以下格式（包括各条款的序号）：
\n\t\t(1)权利人对涉嫌侵权内容拥有知识产权或其他合法权益和/或依法可以行使知识产权或其他合法权益的权属证明；
\n\t\t(2)请充分、明确地描述被侵犯了知识产权或其他合法权益的情况；
\n\t\t(3)请指明涉嫌侵权的哪些内容侵犯了第2项中列明的权利；
\n\t\t(4)请提供权利人具体的联络信息，包括姓名、身份证或护照复印件（对自然人）、单位登记证明复印件（对单位）、通信地址、电话号码、传真和电子邮件；
\n\t\t(5)请提供涉嫌侵权内容在信息网络上的位置（如指明您举报的含有侵权内容的出处，即：指爱高内的位置）以便我们与您举报的含有侵权内容的所有权人/管理人联系；
\n\t\t(6)请在权利通知中加入如下关于通知内容真实性的声明：“我保证，本通知中所述信息是充分、真实、准确的，如果本权利通知内容不完全属实，本人将承担由此产生的一切法律责任。”
\n\t\t一旦收到符合上述要求之通知，爱高将采取包括删除等相应措施。如不符合上述条件，爱高会请阁下提供相应信息，且暂不采取包括删除等相应措施。

\n\t\t6.2 对于用户通过爱高服务（包括但不限于机票、酒店、签证、博客等）上传到爱高网站上可公开获取区域的任何内容，用户授予爱高在全世界范围内具有免费的、永久性的、不可撤销的、非独家的的许可以及再许可的权利，以使用、复制、修改、改编、出版、翻译、据以创作衍生作品、传播、表演和展示此等内容（整体或部分），和/或将此等内容编入当前已知的或以后开发的其他任何形式的作品、媒体或技术中。

\n\t\t6.3 爱高拥有本网站内所有资料的版权。任何被授权的浏览、复制、打印和传播属于本网站内的资料必须符合以下条件：
\n\t\t所有的资料和图象均以获得信息为目的；
\n\t\t所有的资料和图象均不得用于商业目的；
\n\t\t所有的资料、图象及其任何部分都必须包括此版权声明；
\n\t\t爱高所有的产品、技术与所有程序均属于爱高知识产权，在此并未授权。

\n\t\t6.4 对于在爱高平台上教练和球友指导每小时的收益，平台分别对其留存40元和20元用作支付银行手续费和管理费等。爱高具有对教练收费和平台扣费进行调整的权利。

\n\t\t6.5 爱高及相关图形等为爱高的商标。未经爱高许可，任何人不得擅自（包括但不限于：以非法的方式复制、传播、展示、镜像、上载、下载）使用。否则，爱高将依法追究法律责任。

\n\n七、其他

\n\t\t7.1 本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。

\n\t\t7.2 如双方就本协议内容或其执行发生任何争议，双方应尽量友好协商解决；协商不成时，任何一方均可向爱高所在地的人民法院提起诉讼。

\n\t\t7.3 爱高未行使或执行本服务协议任何权利或规定，不构成对前述权利或权利之放弃。

\n\t\t7.4 如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。

\n\n本《协议》的版权由爱高所有，爱高保留一切解释和修改权利。
\n\n请您在发现任何违反本服务协议以及其他任何单项服务的服务条款、爱高各类公告之情形时，通知爱高。
        \n您可以通过如下联络方式同爱高联系∶
\n成都市天府国际金融中心4号楼成都爱高尔夫科技有限公司
\n邮政编码：610000
</string>
    <string name="str_reg_phone_verify_title">手机验证</string>
    <string name="str_reg_info_setup_title">填写个人信息</string>
    <string name="str_reg_info_setup_hint">填写完整信息，可提高约球成功率</string>
    <string name="str_reg_info_setup_do">完成注册</string>
    <string name="str_toast_avatar_null">请设置头像！</string>
    <string name="str_toast_register_success">注册成功！</string>
    <string name="str_account_yearsexp_wrap"> %1$d年</string>
    <string name="str_account_hoursexp_wrap"> %1$d小时</string>
    <string name="str_account_age_wrap"> %1$d岁</string>
    <string name="str_reset_phone_submit_title">填写手机号</string>
    <string name="str_reset_phone_submit_hint">如果你无法通过注册手机号接收短信验证码,也可以拨打客服人工电话找回：%1$s</string>
    <string name="str_agreement_head">点击"下一步"表示你同意</string>
    <string name="str_agreement">《爱高尔夫用户协议》</string>
    <string name="str_phone_customer_service">联系客服</string>
    <string name="str_reset_phone_submit_num">4000099113</string>
    <string name="str_reset_phone_verify_title">手机验证</string>
    <string name="str_reset_do_title">重置密码</string>
    <string name="str_btn_reset">重置</string>
    <string name="str_verify_content">我们将发送验证码短信到这个号码：\n%1s</string>
    <string name="str_verify_hint">我们已经发送验证码短信到您的手机：</string>
    <string name="str_toast_input_phone">请输入手机号码。</string>
    <string name="str_toast_invalid_phone">手机号码格式不正确。</string>
    <string name="str_btn_renew">重新获取</string>
    <string name="str_btn_renew_time">60秒</string>
    <string name="str_toast_input_verify">请输入有效验证码！</string>
    <string name="str_toast_input_bank_name">请输入银行名称</string>
    <string name="str_toast_error_verify">验证码错误，请重新输入！</string>
    <string name="str_toast_modify_success">修改成功！</string>
    <string name="str_positive_handicap">%1$s</string>
    <string name="str_negative_handicap">%1$s</string>
    <string name="str_golfers_home_title">球友</string>
    <string name="str_recommand_golfers_home_title">推荐球友</string>
    <string name="str_golfers_search_result_title">球友搜索结果</string>
    <string name="str_golfers_label_hint">点击标签找感兴趣的球友</string>
    <string name="str_golfers_selection_hint">设置筛选条件</string>
    <string name="str_golfers_req_no_data_hint">无数据，请修改条件重新查询！</string>
    <string name="str_golfers_li_invate_btn">约球</string>
    <string name="str_golfers_li_handicapi_title">成绩:</string>
    <string name="str_cusinfo_item_history">约球历史</string>
    <string name="str_cusinfo_list_header_time">时间</string>
    <string name="str_cusinfo_list_header_player">对手</string>
    <string name="str_cusinfo_list_header_palhcpi">对手成绩</string>
    <string name="str_cusinfo_list_header_myhcpi">我的成绩</string>
    <string name="str_cusinfo_list_header_invite">约球</string>
    <string name="str_cusinfo_modify_pwd">修改密码</string>
    <string name="str_cusinfo_modify_pwd_do">确认</string>
    <string name="str_cusinfo_rebind_phone">重新绑定手机</string>
    <string name="str_cusinfo_signature_title">签名</string>
    <string name="str_feedback">意见反馈</string>
    <string name="str_feedback_tips">\t\t\t欢迎您提出宝贵的意见和建议，您留下的每个字都将用来改善我们的软件，希望我们能为您提供更好的服务。</string>
    <string name="str_feedback_hint">\t\t有什么想说的?给我们发送您宝贵的意见。</string>
    <string name="str_member_score_history_title">成绩历史</string>
    <string name="str_member_score_histoyr_list_header_course">球场</string>
    <string name="str_member_score_histoyr_list_header_teeTime">时间</string>
    <string name="str_member_score_histoyr_list_header_handicap">差点指数</string>
    <string name="str_member_score_histoyr_list_header_check">查看</string>
    <string name="str_phone_input_hint">请输入手机号码</string>
    <string name="str_btn_next">下一步</string>
    <string name="str_btn_save">保存</string>
    <string name="str_comm_old_password">原密码</string>
    <string name="str_comm_current_bind_phone">当前绑定手机号:%1$2s</string>
    <string name="str_comm_rebind_relogin">绑定后请使用新的手机号登录</string>
    <string name="str_input_pre_pwd_first">输入密码</string>
    <string name="str_input_pre_pwd_confirm">确认密码</string>
    <string name="str_input_hint_pwd_confirm">请再次输入密码</string>
    <string name="str_input_hint_signature">设置签名,将更容易获取约球机会</string>
    <string name="str_input_hint_pwd_new">请输入4&#8211;8位新密码</string>
    <string name="str_input_hint_pwd_old">请输入旧密码</string>
    <string name="str_input_hint_phone_new">请输入手机号码</string>
    <string name="str_reset_pwd_hint">@string/str_input_hint_pwd_first</string>
    <string name="str_reset_pwd_confirm_hint">请再次输入密码</string>
     <string name="str_friend_comments_add">发送</string>
</resources>