<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_bkg"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/custom_title_style" >
        <ImageButton
			style="@style/top_bar_btn_style"
			android:contentDescription="@null"
			android:layout_alignParentLeft="true"
			android:src="@drawable/xbtn_back"
			android:onClick="onInviteHistoryBackClick" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_cusinfo_item_history"
		    android:textColor="@color/color_title_txt"
		    android:textSize="@dimen/txt_title_size"
		    android:layout_centerInParent="true" />
    </RelativeLayout>
    
     <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal">
 
        <TextView
            style="@style/my_history_sub_title_style"
            android:layout_weight="9"
            android:text="@string/str_cusinfo_list_header_time" />
        <TextView
            style="@style/my_history_sub_title_style"
            android:layout_weight="9"
            android:text="@string/str_cusinfo_list_header_player" />
        <TextView
            style="@style/my_history_sub_title_style"
            android:layout_weight="9.3"
            android:text="@string/str_cusinfo_list_header_palhcpi" />
        <TextView
            style="@style/my_history_sub_title_style"
            android:layout_weight="9.3"
            android:text="@string/str_cusinfo_list_header_myhcpi" />
        <TextView
            style="@style/my_history_sub_title_style"
            android:text="@string/str_cusinfo_list_header_invite" />
    </LinearLayout>
    
    
    <include
	    android:id="@+id/invite_history_list_load_fail"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    layout="@layout/common_load_fail" />
    
    <com.hylg.igolf.ui.view.PullListView
        		android:layout_height="match_parent"
			    android:id="@+id/invite_history_listview"
			   style="@style/listview_style"  />        

</LinearLayout>
