<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_bkg"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/custom_title_style" >
		<ImageButton
			android:id="@+id/modify_pwd_topbar_back"
			style="@style/top_bar_btn_style"
			android:contentDescription="@null"
			android:layout_alignParentLeft="true"
			android:src="@drawable/xbtn_back" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_cusinfo_modify_pwd"
		    android:textColor="@color/color_title_txt"
		    android:textSize="@dimen/txt_title_size"
		    android:layout_centerInParent="true" />
    </RelativeLayout>
    
    <RelativeLayout
        		android:layout_marginTop="@dimen/view_ver_distance"
				android:layout_marginBottom="@dimen/view_ver_distance"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="@dimen/view_ver_margin"
			    android:background="@drawable/frame_bkg" >
				<TextView
				    android:id="@+id/modify_pwd_pre_old_password"
				    style="@style/setup_pre_txt_style"
				    android:layout_alignParentLeft="true"
				    android:text="@string/str_comm_old_password" />
				<EditText
				    android:id="@+id/modify_pwd_old_password"
				    style="@style/setup_info_et_style"
				    android:layout_toRightOf="@id/modify_pwd_pre_old_password"
				    android:hint="@string/str_input_hint_pwd_old"
				    android:inputType="textPassword" />
	</RelativeLayout>
	
    <RelativeLayout
				android:layout_marginBottom="@dimen/view_ver_distance"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_margin="@dimen/view_ver_margin"
			    android:background="@drawable/frame_bkg" >
				<TextView
				    android:id="@+id/modify_pwd_pre_new_password"
				    style="@style/setup_pre_txt_style"
				    android:layout_alignParentLeft="true"
				    android:text="@string/str_input_pre_pwd_first" />
				<EditText
				    android:id="@+id/modify_pwd_new_password"
				    style="@style/setup_info_et_style"
				    android:layout_toRightOf="@id/modify_pwd_pre_new_password"
				    android:hint="@string/str_input_hint_pwd_new"
				    android:maxLength="@integer/password_max_length"
				    android:inputType="textPassword" />
				
				<View 
				    android:id="@+id/modify_pwd_line_new_password"
				    android:layout_width="match_parent"
				    android:layout_height="@dimen/div_line_width"
				    android:background="@color/color_div_line"
				    android:layout_below="@id/modify_pwd_pre_new_password"/>

				<TextView
				    android:id="@+id/modify_pwd_pre_confirm_password"
				    style="@style/setup_pre_txt_style"
				    android:layout_alignParentLeft="true"
				    android:layout_below="@id/modify_pwd_pre_new_password"
				    android:text="@string/str_input_pre_pwd_confirm" />
				<EditText
				    android:id="@+id/modify_pwd_confirm_password"
				    style="@style/setup_info_et_style"
				    android:layout_toRightOf="@id/modify_pwd_pre_confirm_password"
				    android:layout_below="@id/modify_pwd_line_new_password"
				    android:hint="@string/str_input_hint_pwd_confirm"
				    android:maxLength="@integer/password_max_length"
				    android:inputType="textPassword" />			
	</RelativeLayout>
	
    <Button
				android:id="@+id/modify_pwd_do"
				android:layout_margin="@dimen/view_ver_margin"
				android:layout_width="match_parent"
				android:layout_height="@dimen/btn_height"
				android:background="@drawable/xbtn_green"
				android:text="@string/str_cusinfo_modify_pwd_do"
				android:textColor="@android:color/white"
				android:textSize="@dimen/txt_btn_txt_size" />

</LinearLayout>
