<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/custom_title_style" >
		<ImageButton
			android:id="@+id/account_psubmit_topbar_back"
			style="@style/top_bar_btn_style"
			android:contentDescription="@null"
			android:layout_alignParentLeft="true"
			android:src="@drawable/xbtn_back" />
		<TextView
		    android:id="@+id/account_psubmit_title"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_reg_phone_submit_title"
		    android:textColor="@color/color_title_txt"
		    android:textSize="@dimen/txt_title_size"
		    android:layout_centerInParent="true" />
    </RelativeLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@drawable/repeat_bkg"
	    android:paddingTop="@dimen/view_ver_margin"
	    android:paddingBottom="@dimen/view_ver_margin"
	    android:paddingLeft="@dimen/view_hor_margin"
	    android:paddingRight="@dimen/view_hor_margin"
	    android:orientation="vertical" >
		
		<TextView
		    android:layout_marginBottom="@dimen/view_ver_distance"
		    android:id="@+id/account_psubmit_reg_hint"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:drawableLeft="@drawable/ic_hint_star"
		    android:drawablePadding="3dip"
		    android:gravity="center_vertical"
		    android:text="@string/str_reg_phone_submit_hint"
		    android:textColor="@color/color_hint_txt"
		    android:textSize="@dimen/txt_hint_size" />
	    
		<EditText
		    android:layout_marginBottom="@dimen/view_ver_distance"
		    android:id="@+id/account_psubmit_input_et"
		    android:layout_width="match_parent"
		    android:layout_height="@dimen/edittxt_bkg_height"
		    android:paddingLeft="@dimen/edittext_h_space"
		    android:paddingRight="@dimen/edittext_h_space"
		    android:background="@drawable/edittext_bkg"
		    android:hint="@string/str_phone_input_hint"
		    android:inputType="phone"
		    android:textSize="@dimen/txt_hint_size" />

		<LinearLayout
			android:layout_marginBottom="15dp"
			android:id="@+id/account_psubmit_agreement_linear"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
			<TextView

				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_agreement_head"
				android:textColor="@color/color_hint_txt"
				android:textSize="@dimen/txt_size_small"/>

			<TextView
				android:textStyle="bold"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/str_agreement"
				android:textColor="@color/color_hint_txt"
				android:textSize="@dimen/txt_size_s"/>
		</LinearLayout>

		<Button
			android:layout_marginBottom="@dimen/view_ver_distance"
			android:id="@+id/account_psubmit_next"
			android:layout_width="match_parent"
			android:layout_height="@dimen/btn_height"
			android:background="@drawable/xbtn_green"
			android:text="@string/str_btn_next"
			android:textColor="@android:color/white"
			android:textSize="@dimen/txt_btn_txt_size" />
		
	<LinearLayout
	    android:id="@+id/account_psubmit_reset"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		<TextView
		    android:id="@+id/account_psubmit_call_gm"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/str_reset_phone_submit_hint"
		    android:textColor="@color/color_hint_txt"
		    android:textSize="@dimen/txt_hint_size"/>
	</LinearLayout>
	
	</LinearLayout>
	
</LinearLayout>
