<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/repeat_bkg"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/custom_title_style" >
		<ImageButton
			android:id="@+id/modify_signature_topbar_back"
			style="@style/top_bar_btn_style"
			android:contentDescription="@null"
			android:layout_alignParentLeft="true"
			android:src="@drawable/xbtn_back" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/str_cusinfo_signature_title"
		    android:textColor="@color/color_title_txt"
		    android:textSize="@dimen/txt_title_size"
		    android:layout_centerInParent="true" />
    </RelativeLayout>
    
    <EditText	android:background="@drawable/edittext_bkg"
			    android:layout_margin="@dimen/view_ver_margin"
			    android:id="@+id/modify_signature_input"
			    style="@style/setup_info_et_style"
			    android:paddingTop="@dimen/edittext_v_space"
			    android:paddingBottom="@dimen/edittext_v_space"
			    android:gravity="center_horizontal|left"
			    android:layout_height="120dip"
			    android:maxLength="@integer/signature_max_length"
			    android:inputType="textMultiLine"
			    android:hint="@string/str_input_hint_signature"/>
    <Button
				android:id="@+id/modify_signature_save"
				android:layout_margin="@dimen/view_ver_margin"
				android:layout_width="match_parent"
				android:layout_height="@dimen/btn_height"
				android:background="@drawable/xbtn_green"
				android:text="@string/str_btn_save"
				android:textColor="@android:color/white"
				android:textSize="@dimen/txt_btn_txt_size" />

</LinearLayout>
